Bug 108872 - BASIC module cannot be re-added with the same name, even after deletion through organizer
Summary: BASIC module cannot be re-added with the same name, even after deletion throu...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
5.4.2.2 release
Hardware: All All
: medium normal
Assignee: tagezi
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-06-30 00:29 UTC by himajin100000
Modified: 2017-11-21 09:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description himajin100000 2017-06-30 00:29:56 UTC
Description:
see steps to reproduce

Steps to Reproduce:
1. Run Writer (any LibreOffice application is fine)
2. Follow "Tools->Macros->Organize Macros->LibreOfficeDev Basic" from main menu.
3. Now you see "LibreOficeDev Basic Macros" Dialog. In "Macro From" section you will see "Standard" library under "My Macros" selected.
4. Click "New" Button
5. A dialog appears. It asks for a new module name. For this STR, we use default "Module1". so, just click OK.
6. BASIC IDE window comes up. close that window.
7. Now we came back to Writer
8. Follow "Tools->Macros->Organize Macros->LibreOfficeDev Basic" from main menu.
9. Again you see "LibreOficeDev Basic Macros" Dialog. Now "Module1" is selected.
10. Click "Organizer" button this time.
11. "Module1" is selected in the Organizer. Click "Delete" in this window. 
12. agree to the confirmation dialog
13. Close the Organizer
14. Now "Standard" is selected.
15. Click "New" button again.
16. for the module name, we REUSE "Module1", so click OK.
17. Now you see "Module1" under "Standard"
18. Double Click "Standard", and "Module1" disappears.
19. Double Click "Standard"

Actual Results:  
Expected Result:
"Module1" does not appear under "Standard"

Expected Results:
Expected Result:
"Module1" does appear under "Standard"


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:56.0) Gecko/20100101 Firefox/56.0
Comment 1 himajin100000 2017-06-30 00:30:56 UTC
Oops, typos.

Actual Results:  
"Module1" does not appear under "Standard"

Expected Results:
"Module1" does appear under "Standard"
Comment 2 raal 2017-07-01 13:57:06 UTC
I can not confirm with macro module under "My macros", but I can confirm with module under "untitled 1" (new file) macro.

Version: 6.0.0.0.alpha0+
Build ID: 77f77c57d336ba041faf51e2168372d1e0962a19
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-06-29_23:40:47


regression, works with Version 4.1.0.0.alpha0+
Comment 3 raal 2017-07-02 14:42:09 UTC
This seems to have begun at the below commit.
Adding Cc: to Markus Mohrhard ; Could you possibly take a look at this one?
Thanks
 6d9989c53cf0cb8fa93b17f499b13768138dbf89 is the first bad commit
commit 6d9989c53cf0cb8fa93b17f499b13768138dbf89
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Feb 10 06:27:27 2017 +0100

    source 2be139d76bdb66e77719613d802dc0047c284456

author	Markus Mohrhard <markus.mohrhard@googlemail.com>	2017-01-04 22:58:13 (GMT)
committer	Markus Mohrhard <markus.mohrhard@googlemail.com>	2017-01-05 01:10:36 (GMT)
commit 2be139d76bdb66e77719613d802dc0047c284456 (patch)
tree 64719121882c299619c539d97b4ae24e567ae31c
parent e885c4429ab48d32f74c3a04a6e9e3a3ac492ee1 (diff)
tdf#105069, store the VBA module info for new modules as well
This was never a problem until we started to export the VBA stream
instead of just writing back the imported stream.
Comment 4 Commit Notification 2017-11-20 14:43:29 UTC
tagezi committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9abd653129986d5aa8a07b8f8bb92b2d4254126e

tdf#108872 Also remove VBA module info on module removal

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 tagezi 2017-11-21 09:39:50 UTC
I done it to 6.0. And I think It enough, because It usual cannot touch real users.