tdf#108872 BASIC module cannot be re-added, even after deletion

Added removing xVBAModuleInfo to avoid exception

Change-Id: I6750819ce36c112c146d7800a6bab4cc207e0062